--- a/templates/home.html
+++ b/templates/home.html
@@ -395,7 +395,7 @@ datafilter= data.filter(function(d){return d.countryname==allGroup[0]})
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-       .style("fill", "grey")
+       .style("fill", "black")
       .style("opacity", 1)
       .text("I50: Median estimation of daily incidence");
 
@@ -405,8 +405,10 @@ svg.append("text")
       .attr("x",350)
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-         .style("fill", "grey")
-      .style("opacity", .5)
+    //     .style("fill", "grey")
+  //    .style("opacity", .5)
+      .attr("fill", "#cce5df")
+      .style("opacity", 1)
       .text("I75, I25: 50% quantile band");
 
 svg2.append("text")
@@ -424,8 +426,9 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-       .style("fill", "grey")
-      .style("opacity", .5)
+      // .style("fill", "grey")
+      .attr("fill", "#cce5df")
+      .style("opacity", 1)
       .text("R75, R25: 50% estimation band");
 
       today=d3.max(d3.extent(data, function(d) { return d.date; }))
@@ -681,7 +684,7 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-       .style("fill", "grey")
+       .style("fill", "black")
       .style("opacity", 1)
       .text("I50: Median estimation of daily incidence");
 
@@ -691,9 +694,10 @@ svg.append("text")
       .attr("x",350)
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-         .style("fill", "grey")
-      .style("opacity", .5)
+      .attr("fill", "#cce5df")
+      .style("opacity", 1)
       .text("I75, I25: 50% quantile band");
+
 
 svg2.append("text")
       .attr("y",  height + margin.bottom-30)
@@ -710,8 +714,10 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-       .style("fill", "grey")
-      .style("opacity", .5)
+    //   .style("fill", "grey")
+  //    .style("opacity", .5)
+      .attr("fill", "#cce5df")
+      .style("opacity", 1)
       .text("R75, R25: 50% estimation band");
 
       // HORIZONTAL LINE
