update color letters

--- a/templates/home.html
+++ b/templates/home.html
@@ -173,9 +173,11 @@ datafilter=data.filter(function(d){return d.countryname==allGroup[0]})
           .x(function(d) { return x(d.date) })
           .y(function(d) { return y(d.True_I_Inc) })
         )
-        .attr("stroke","steelblue",function(d){ return myColor("valueA") })
+    //    .attr("stroke","steelblue",function(d){ return myColor("valueA") })
+        .attr("stroke","black",function(d){ return myColor("valueA") })
         .style("stroke-width", "1px")
       //  .style("stroke-width", 4)
+        .style("stroke-dasharray", ("3, 3"))
         .style("fill", "none")
 
 
@@ -188,11 +190,12 @@ datafilter=data.filter(function(d){return d.countryname==allGroup[0]})
           .x(function(d) { return x(d.date) })
           .y(function(d) { return y(d.I50_Inc) })
         )
-        .attr("stroke","grey",function(d){ return myColor("valueA") })
+      /////  .attr("stroke","grey",function(d){ return myColor("valueA") })
+        .attr("stroke","steelblue",function(d){ return myColor("valueA") })
        // .style("stroke-width", 4)
         .style("stroke-width", "1px")
         .style("fill", "none")
-        .style("stroke-dasharray", ("3, 3"))
+      /////  .style("stroke-dasharray", ("3, 3"))
         .style("opacity", 1)
 
        // Show confidence interval
@@ -268,10 +271,12 @@ datafilter= data.filter(function(d){return d.countryname==allGroup[0]})
           .x(function(d) { return x2(d.date) })
           .y(function(d) { return y2(d.R050) })
         )
-        .attr("stroke","black",function(d){ return myColor("valueA") })
+    //    .attr("stroke","black",function(d){ return myColor("valueA") })
+        .attr("stroke","steelblue",function(d){ return myColor("valueA") })
         .style("stroke-width", "1px")
       //  .style("stroke-width", 4)
         .style("fill", "none")
+        .style("opacity", 1)
 
      // Initialize line6 with group
   //  var line6 = svg2
@@ -386,7 +391,8 @@ datafilter= data.filter(function(d){return d.countryname==allGroup[0]})
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-      .style("fill", "steelblue")
+      //.style("fill", "steelblue")
+      .style("fill", "black")
       .text("True I: reported daily incidence");
 
  svg.append("text")
@@ -395,7 +401,8 @@ datafilter= data.filter(function(d){return d.countryname==allGroup[0]})
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-       .style("fill", "black")
+      .style("fill", "steelblue")
+  //     .style("fill", "black")
       .style("opacity", 1)
       .text("I50: Median estimation of daily incidence");
 
@@ -417,7 +424,8 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-      .style("fill", "black")
+      .style("fill", "steelblue")
+    //  .style("fill", "black")
       .text("R50: Median estimated daily reproduction number");
 
  svg2.append("text")
@@ -510,10 +518,13 @@ svg2.append("text")
             .x(function(d) { return x(d.date) })
             .y(function(d) { return y(d.True_I_Inc) })
           )
-        .attr("stroke","steelblue",function(d){ return myColor("valueA") })
+    //    .attr("stroke","steelblue",function(d){ return myColor("valueA") })
+        .attr("stroke","black",function(d){ return myColor("valueA") })
         .style("stroke-width", "1px")
       //  .style("stroke-width", 4)
         .style("fill", "none")
+        .style("stroke-dasharray", ("3, 3"))
+        .style("opacity", 1)
 
       // Give these new data to update line
       var line2 = svg
@@ -524,11 +535,12 @@ svg2.append("text")
             .x(function(d) { return x(d.date) })
             .y(function(d) { return y(d.I50_Inc) })
           )
-        .attr("stroke","grey",function(d){ return myColor("valueA") })
+    //    .attr("stroke","grey",function(d){ return myColor("valueA") })
+        .attr("stroke","steelblue",function(d){ return myColor("valueA") })
        // .style("stroke-width", 4)
         .style("stroke-width", "1px")
         .style("fill", "none")
-        .style("stroke-dasharray", ("3, 3"))
+    //    .style("stroke-dasharray", ("3, 3"))
         .style("opacity", 1)
 
 
@@ -566,7 +578,8 @@ svg2.append("text")
             .x(function(d) { return x2(d.date) })
             .y(function(d) { return y2(d.R050) })
           )
-        .attr("stroke","black",function(d){ return myColor("valueA") })
+      //  .attr("stroke","black",function(d){ return myColor("valueA") })
+        .attr("stroke","steelblue",function(d){ return myColor("valueA") })
         .style("stroke-width", "1px")
       //  .style("stroke-width", 4)
         .style("fill", "none")
@@ -675,7 +688,7 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-      .style("fill", "steelblue")
+      .style("fill", "black")
       .text("True I: reported daily incidence");
 
  svg.append("text")
@@ -684,7 +697,7 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-       .style("fill", "black")
+      .style("fill", "steelblue")
       .style("opacity", 1)
       .text("I50: Median estimation of daily incidence");
 
@@ -705,7 +718,8 @@ svg2.append("text")
       .style("text-anchor", "middle")
       .attr("dy", ".35em")
       .attr("text-anchor", "start")
-      .style("fill", "black")
+    //  .style("fill", "black")
+      .style("fill", "steelblue")
       .text("R50: Median estimated daily reproduction number");
 
  svg2.append("text")
