--- a/templates/home.html
+++ b/templates/home.html
@@ -393,7 +393,7 @@ datafilter= data.filter(function(d){return d.countryname==allGroup[0]})
       .attr("text-anchor", "start")
       //.style("fill", "steelblue")
       .style("fill", "black")
-      .text("True I: reported daily incidence");
+      .text("True I: reported daily incidence (?)");
 
  svg.append("text")
       .attr("y",  height + margin.bottom-10)
